add eb on gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,8 @@ db.sqlite3
 .venv
 venv/
 ENV/
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
