change health check ebextension file format

--- a/.ebextensions/healthcheckurl.config
+++ b/.ebextensions/healthcheckurl.config
@@ -1,3 +1,4 @@
 option_settings:
-  aws:elasticbeanstalk:application:
-    Application Healthcheck URL: /
+  - namespace: aws:elasticbeanstalk:application
+    option_name: Application Healthcheck URL
+    value: /health
