--- a/.ebextensions/healthcheckurl.config
+++ b/.ebextensions/healthcheckurl.config
@@ -1,4 +1,3 @@
 option_settings:
-  - namespace:  aws:elasticbeanstalk:application
-    option_name:  Application Healthcheck URL
-    value:  /health
+  aws:elasticbeanstalk:application:
+    Application Healthcheck URL: "/health"
