try postgres94 package

--- a/.ebextensions/01-yum.config
+++ b/.ebextensions/01-yum.config
@@ -3,4 +3,4 @@ packages:
     libjpeg-turbo-devel: []
     libpng-devel: []
     freetype-devel: []
-    postgresql-devel: []
+    postgresql94-devel: []
