add production tfvars in gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,4 @@ infra/.terraform
 infra/.terraform.tfstate.lock.info
 infra/terraform.tfstate
 infra/terraform.tfstate.backup
+infra/production.tfvars
