--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: python
 python:
   - "3.6"
+services:
+  - postgresql
 cache: pip
 install: "pip install -r requirements.txt"
 script: python manage.py test
