add uploads on gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,6 @@ infra/.terraform.tfstate.lock.info
 infra/terraform.tfstate
 infra/terraform.tfstate.backup
 infra/production.tfvars
+
+# Uploads from dev
+main/static/main/uploads/*
