--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ services:
   - postgresql
 cache: pip
 install: pip install -r requirements.txt
-script: python manage.py test
+script: python -Wall manage.py test
