--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ psycopg2==2.7.3.1
 python-dateutil==2.6.1    # via botocore
 pytz==2017.2              # via django
 pyyaml==3.12              # via awsebcli
+raven==6.2.1
 requests==2.9.1           # via awsebcli, docker-py
 semantic_version==2.5.0   # via awsebcli
 six==1.11.0               # via blessed, docker-py, dockerpty, python-dateutil, websocket-client
