--- a/.ebextensions/static.config
+++ b/.ebextensions/static.config
@@ -1,3 +1,3 @@
 container_commands:
   02_collectstatic:
-    command: "python3 manage.py collectstatic"
+    command: "python3 manage.py collectstatic --noinput"
