--- a/requirements.txt
+++ b/requirements.txt
@@ -18,11 +18,15 @@ docker-py==1.7.2          # via awsebcli
 dockerpty==0.4.1          # via awsebcli
 docopt==0.6.2             # via awsebcli
 docutils==0.14            # via botocore
+flake8==3.4.1
 jmespath==0.9.3           # via boto3, botocore
+mccabe==0.6.1             # via flake8
 olefile==0.44             # via pillow
 pathspec==0.5.0           # via awsebcli
 pillow==4.2.1
 psycopg2==2.7.3.1
+pycodestyle==2.3.1        # via flake8
+pyflakes==1.5.0           # via flake8
 python-dateutil==2.6.1    # via botocore
 pytz==2017.2              # via django
 pyyaml==3.12              # via awsebcli
