--- a/requirements.txt
+++ b/requirements.txt
@@ -4,16 +4,16 @@
 #
 #    pip-compile --output-file requirements.txt requirements.in
 #
-awsebcli==3.11.0
+awsebcli==3.12.0
 blessed==1.14.2           # via awsebcli
 boto3==1.4.7
-botocore==1.7.18          # via awsebcli, boto3, s3transfer
+botocore==1.7.28          # via awsebcli, boto3, s3transfer
 cement==2.8.2             # via awsebcli
 colorama==0.3.7           # via awsebcli
 django-ckeditor==5.3.0
 django-js-asset==0.1.1    # via django-ckeditor
 django-s3direct==1.0.3
-django==1.11.5
+django==1.11.6            # via django-s3direct
 docker-py==1.7.2          # via awsebcli
 dockerpty==0.4.1          # via awsebcli
 docopt==0.6.2             # via awsebcli
@@ -23,7 +23,7 @@ jmespath==0.9.3           # via boto3, botocore
 mccabe==0.6.1             # via flake8
 olefile==0.44             # via pillow
 pathspec==0.5.0           # via awsebcli
-pillow==4.2.1
+pillow==4.3.0
 psycopg2==2.7.3.1
 pycodestyle==2.3.1        # via flake8
 pyflakes==1.5.0           # via flake8
