--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,5 @@ services:
   - postgresql
 cache: pip
 install: pip install -r requirements.txt
-script: python -Wall manage.py test
+script: python manage.py test main.tests.test_index.IndexViewsTest.test_index
 after_success: ./deploy.sh
