--- a/requirements.txt
+++ b/requirements.txt
@@ -13,11 +13,12 @@ colorama==0.3.7           # via awsebcli
 django-ckeditor==5.3.0
 django-js-asset==0.1.1    # via django-ckeditor
 django-s3direct==1.0.3
-django==1.11.6            # via django-s3direct
+django==1.11.6
 docker-py==1.7.2          # via awsebcli
 dockerpty==0.4.1          # via awsebcli
 docopt==0.6.2             # via awsebcli
 docutils==0.14            # via botocore
+faker==0.8.7
 flake8==3.4.1
 jmespath==0.9.3           # via boto3, botocore
 mccabe==0.6.1             # via flake8
@@ -27,15 +28,16 @@ pillow==4.3.0
 psycopg2==2.7.3.1
 pycodestyle==2.3.1        # via flake8
 pyflakes==1.5.0           # via flake8
-python-dateutil==2.6.1    # via botocore
+python-dateutil==2.6.1    # via botocore, faker
 pytz==2017.2              # via django
 pyyaml==3.12              # via awsebcli
 raven==6.2.1
 requests==2.9.1           # via awsebcli, docker-py
 s3transfer==0.1.11        # via boto3
 semantic_version==2.5.0   # via awsebcli
-six==1.11.0               # via blessed, docker-py, dockerpty, python-dateutil, websocket-client
+six==1.11.0               # via blessed, docker-py, dockerpty, faker, python-dateutil, websocket-client
 tabulate==0.7.5           # via awsebcli
 termcolor==1.1.0          # via awsebcli
+text-unidecode==1.1       # via faker
 wcwidth==0.1.7            # via blessed
 websocket-client==0.44.0  # via awsebcli, docker-py
