--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ services:
 cache: pip
 install: pip install -r requirements.txt
 script: python -Wall manage.py test
+before_deploy:
+  - ./staging.sh
 deploy:
   provider: elasticbeanstalk
   access_key_id: AKIAIPDDJZXQPR23E5BQ
@@ -18,5 +20,3 @@ deploy:
   on:
     repo: OKThess/website
     branch: master
-after_deploy:
-  - ./staging.sh
