--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ python:
 services:
   - postgresql
 cache: pip
-before_install: openssl aes-256-cbc -K $encrypted_d937ddcc91b7_key -iv $encrypted_d937ddcc91b7_iv -in id_rsa_okthess_travis.enc -out id_rsa_okthess_travis -d
+before_install:
+  - openssl aes-256-cbc -K $encrypted_d937ddcc91b7_key -iv $encrypted_d937ddcc91b7_iv -in id_rsa_okthess_travis.enc -out id_rsa_okthess_travis -d
 install: pip install -r requirements.txt
 script: python -Wall manage.py test
 script: ./staging.sh
